* Fixed "Column Height" force of Columns element, in Firefox.
* Fixed issues with main menu "plus" icons showing when activating a plugin that adds FontAwesome.
* Fixed issues with "No, don't apply featured image link to single post" in post options.
* Fixed Post Showcase page template pulling crop size for Post Grids.
* Fixed fatal error with WooCommerce.
* Little fixes to WPML compatibility.

2.0.0-beta1
-----

* **Updated Theme Blvd framework to 2.5.0**
* Complete frontend theme re-design.
* Added full support for post formats by default.
* Added mega menus, configured from *Appearance > Menus*.
* Added frontend sticky menu by default.
* Added frontend "Scroll to Top" button by default.
* Added frontend floating search box by default.
* Added frontend social icons, by default.
* Added automatic frontend WPML language switcher, if using WPML plugin.
* Added share icons to single posts.
* Added related posts display to single posts.
* Added "Author Box" for author archives and single posts, configured from user profile admin page.
* New mobile menu design, which animates from the side of the device.
* Tons of new framework elements to go with [Layout Builder 2.0](https://wordpress.org/plugins/theme-blvd-layout-builder/changelog/) update.
* Added parallax background support.
* Added slideshow background suppport.
* Sidebars always outputted below content for better SEO, no matter the sidebar layout used.
* New "Theme Base" system at *Appearance > Theme Base*.
* Complete overhaul of Theme Options page and available options.
* Added bbPress compatibility.
* Many new framework option types to integrate with Layout Builder and Theme Options.
* New Import/Export system for Theme Options.
* Added selection of post display type for archive pages, editable from theme options or editing specific categories and tags.
* New Blog post display (new default for blogroll and archives).
* New Post Showcase post display.
* Enhancements to default Post Grid display.